feat: <תיאור קצר>

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -504,5 +504,94 @@
   "forceLocation": "Force Location (Dev)",
   "@forceLocation": {
     "description": "Force location button for dev mode"
-  }
+  },
+  "gameDetailsTitle": "Game Details",
+  "gameLoadingMessage": "Loading game...",
+  "gameLoadingError": "Failed to load game",
+  "gameNotFound": "Game not found",
+  "attendanceMonitoring": "Attendance Monitoring",
+  "locationNotSpecified": "Location not specified",
+  "teamCountLabel": "{count} teams",
+  "signupsCount": "{count} registered",
+  "signupsCountFull": "{count} registered (full)",
+  "gameRulesTitle": "Game rules",
+  "gameDurationLabel": "Duration: {minutes} minutes",
+  "gameEndConditionLabel": "End condition: {condition}",
+  "checkingPermissions": "Checking permissions...",
+  "statusApproved": "Approved",
+  "statusPending": "Pending",
+  "removePlayerTooltip": "Remove player",
+  "signupRemovedSuccess": "Registration removed",
+  "signupSuccess": "Joined the game",
+  "onlyCreatorCanStartGame": "Only the game creator can start",
+  "gameStartedSuccess": "Game started",
+  "onlyCreatorCanEndGame": "Only the game creator can end",
+  "gameEndedSuccess": "Game ended",
+  "gameStatusDraft": "Draft",
+  "gameStatusScheduled": "Scheduled",
+  "gameStatusRecruiting": "Recruiting players",
+  "gameStatusTeamSelection": "Team selection",
+  "gameStatusTeamsFormed": "Teams formed",
+  "gameStatusFull": "Full",
+  "gameStatusInProgress": "In progress",
+  "gameStatusCompleted": "Completed",
+  "gameStatusStatsInput": "Stats input",
+  "gameStatusCancelled": "Cancelled",
+  "gameStatusArchivedNotPlayed": "Archived - not played",
+  "playersLoadError": "Failed to load players",
+  "targetingMismatchWarning": "Note: this game is for ages {minAge}-{maxAge} {genderSuffix}",
+  "genderMaleSuffix": "(men)",
+  "genderFemaleSuffix": "(women)",
+  "gameChatButton": "Game chat",
+  "requestToJoin": "Request to join",
+  "signupForGame": "Sign up for game",
+  "requestSentPendingApproval": "Request sent - awaiting approval",
+  "cancelSignup": "Cancel registration",
+  "gameFullWaitlist": "Game is full - you can join the waitlist",
+  "pendingRequestsTitle": "Pending requests ({count})",
+  "findMissingPlayers": "Find missing players",
+  "createTeams": "Create teams",
+  "logResultAndStats": "Log result & stats",
+  "startGame": "Start game",
+  "recordStats": "Record stats",
+  "endGame": "End game",
+  "editResult": "Edit result",
+  "viewFullStats": "View full stats",
+  "signupsTitle": "Signups",
+  "confirmedSignupsTitle": "Confirmed ({count})",
+  "pendingSignupsTitle": "Pending ({count})",
+  "noSignups": "No signups",
+  "requestedToJoinAt": "Requested to join • {time}",
+  "approveTooltip": "Approve",
+  "rejectTooltip": "Reject",
+  "playerApprovedSuccess": "Player approved successfully",
+  "rejectRequestTitle": "Reject request",
+  "rejectionReasonLabel": "Rejection reason (required)",
+  "rejectionReasonHint": "For example: the game is full, not the right level...",
+  "rejectRequestButton": "Reject request",
+  "requestRejectedSuccess": "Request rejected",
+  "findMissingPlayersDescription": "The game will switch to \"recruiting\" and appear in the regional feed.\\n{count} more players needed.",
+  "confirm": "Confirm",
+  "recruitingFeedContent": "Hub {hubName} needs {count} players for a game on {gameDate}",
+  "gamePromotedToRegionalFeed": "The game was promoted to the regional feed to find players",
+  "gameOpenForRecruiting": "The game is now open for recruiting players",
+  "loadingWeather": "Loading weather conditions...",
+  "gameWeatherTitle": "Weather for the game",
+  "temperatureCelsius": "{temp}°C",
+  "resultUpdatedSuccess": "Result updated successfully",
+  "resultUpdateError": "Failed to update result: {error}",
+  "teamsTitle": "Teams",
+  "teamPlayerCount": "({count})",
+  "noPlayers": "No players",
+  "sessionSummaryTitle": "Session summary",
+  "sessionWinnerLabel": "Winner: {winner}",
+  "teamStatsTitle": "Team stats",
+  "teamStatsRecord": "Wins: {wins} | Draws: {draws} | Losses: {losses}",
+  "teamStatsGoals": "Goals: {goalsFor} | Diff: {goalDifference}",
+  "pointsShort": "{points} pts",
+  "totalMatchesLabel": "Total {count} games",
+  "teamADefaultName": "Team A",
+  "teamBDefaultName": "Team B",
+  "finalScoreTitle": "Final score",
+  "hubFallbackName": "Hub"
 }
